--- a/style.css
+++ b/style.css
@@ -28,10 +28,10 @@ img.frame{
 }
 
 .name{
-  margin-bottom: 10px;
-  padding-bottom: 10px;
-  font-size: 1.2em;
-  border-bottom: 1px solid #ddd;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  font-size: 1.5em;
+  border-bottom: 1px solid #FF00FF;
 }
 
 .btns{
