--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -52,7 +52,7 @@ ul,ol{
 header
 ======================================================*/
 header {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #000000;
     background-color: #000000;
     position:relative;
 }
