--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -63,6 +63,7 @@ header {
        width:100%;
        top:0;
        z-index: 1;
+    }
 
 
 #main_nav{
@@ -118,7 +119,7 @@ main{
     margin: 0 auto;
     position: relative;
     z-index: 0;
-    background-color: #000000;
+background-color: #575757;
 }
 
 @media screen and (max-width:480px) { 
