--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -52,7 +52,7 @@ ul,ol{
 header
 ======================================================*/
 header {
-    border-bottom: 10px groove #343232;
+    border-bottom: 10px solid #343232;
     background-color: #000000;
     position:relative;
 }
@@ -64,7 +64,7 @@ header {
        top:0;
        z-index: 1;
     }
-    
+}    
 
 #main_nav{
     text-align: center;
