--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -187,7 +187,7 @@ footer
 ======================================================*/
 footer{
     background-color: #555;
-    color:#fff;
+    color:#000000;
     font-size: 80%;
     padding:10px;
     min-height:80px;
