--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,16 +12,19 @@ h1{
     border-left: #FF00FF solid 5px;
     padding-left: 5px;
     margin-bottom:20px;
+    color: #f6f6fb;
 }
 
 h2{
     font-size: 16px;
     margin-bottom:15px;
+    color: #f6f6fb;
 }
 
 h3{
     font-size: 15px;
     margin-bottom:10px;
+    color: #f6f6fb;
 }
 
 html,
