--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -52,6 +52,9 @@ ul,ol,p{
     color: #f6f6fb;
 }
 
+a{
+    color:#FF00FF;
+}
 /*======================================================
 header
 ======================================================*/
